<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- see   MenuCompat.setGroupDividerEnabled(menu, true); to enable separator -->
    <group android:id="@+id/sorting" >
        <item
            android:id="@+id/matrix_menu_r"
            android:title="@string/matrix_menu_r" />
        <item
            android:id="@+id/matrix_menu_g"
            android:title="@string/matrix_menu_g" />
        <item
            android:id="@+id/matrix_menu_b"
            android:title="@string/matrix_menu_b" />

        <item
            android:id="@+id/matrix_menu_gray"
            android:title="@string/matrix_menu_gray" />

        <item
            android:id="@+id/matrix_menu_invert"
            android:title="@string/matrix_menu_invert" />

        <item
            android:id="@+id/matrix_menu_0"
            android:title="@string/matrix_menu_0" />

        <item
            android:id="@+id/matrix_menu_1"
            android:title="@string/matrix_menu_1" />

        <item
            android:id="@+id/matrix_menu_normal"
            android:title="@string/matrix_menu_normal" />
    </group>
</menu>