<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom"
    app:startDestination="@id/fragGridViewDemo">

    <fragment
        android:label="@string/bottom_nav_frag_colormatrix"
        android:id="@+id/fragGridViewDemo"
        android:name="com.landenlabs.all_colormatrix.FragColorMatrixDemo"
        tools:layout="@layout/frag_colormatrix_demo"/>

    <fragment
        android:label="@string/bottom_nav_frag_divider"
        android:id="@+id/fragDividerDemo"
        android:name="com.landenlabs.all_colormatrix.FragPage2Demo"
        tools:layout="@layout/frag_page2_demo"/>

    <fragment
        android:label="@string/bottom_nav_expand"
        android:id="@+id/fragExpandDemo"
        android:name="com.landenlabs.all_colormatrix.FragPage3Demo"
        tools:layout="@layout/frag_page3_demo"/>

</navigation>